--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: nginx
-          image: abhishekpatil1008/gitops-nginx-demo:1.0
+          image:  abhishekpatil1008/gitops-nginx-demo:v2
           ports:
             - containerPort: 80
